# mlops

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  commands.py  config.py  docker-compose.yaml  pyproject.toml  run_server.py
.dvc/: config
conf/: base_config.yaml
data/: test.dvc  train.dvc
lightning_logs/version_0/: events.out.tfevents.1698839660.MacBook-Air-Timofey.local.90220.0
lightning_logs/version_1/: events.out.tfevents.1698839729.MacBook-Air-Timofey.local.90259.0
lightning_logs/version_2/: events.out.tfevents.1698839930.MacBook-Air-Timofey.local.90368.0
lightning_logs/version_3/: events.out.tfevents.1698839964.MacBook-Air-Timofey.local.90390.0
lightning_logs/version_4/: events.out.tfevents.1698840079.MacBook-Air-Timofey.local.90463.0
lightning_logs/version_5/: events.out.tfevents.1698840097.MacBook-Air-Timofey.local.90476.0  hparams.yaml
lightning_logs/version_6/: events.out.tfevents.1698840771.MacBook-Air-Timofey.local.99600.0
lightning_logs/version_7/: events.out.tfevents.1698840802.MacBook-Air-Timofey.local.99632.0
lightning_logs/version_8/: events.out.tfevents.1698841794.MacBook-Air-Timofey.local.354.0
mlops/: constants.py  dataset.py  infer.py  infer_function.py  model.py  train.py  train_function.py
mlops/dataset/: dataset.py
model_repository/simple-onnx-model/: config.pbtxt
model_repository/simple-onnx-model/1/: model.onnx.dvc
